# aoc-2024

./: .clang-format  .gitignore  CMakeLists.txt
input_files/: day09.txt
libs/: CMakeLists.txt
src/: CMakeLists.txt
src/common/: CMakeLists.txt  Coord.h  Direction.h  OrderedSet.h  array2d.h  input.cpp  input.h  print.h  timer.h
src/day01/: main.cpp
src/day02/: main.cpp
src/day03/: main.cpp
src/day04/: main.cpp
src/day05/: main.cpp
src/day06/: main.cpp
src/day07/: main.cpp
src/day08/: main.cpp
src/day09/: main.cpp
src/day10/: main.cpp
src/day11/: main.cpp
src/day13/: main.cpp
src/day14/: main.cpp
src/day15/: main.cpp
src/day16/: main.cpp
src/day17/: main.cpp
src/repository_init/: CMakeLists.txt  main.cpp  main_template.cpp
tests/: CMakeLists.txt
tests/common/: print_tests.cpp
